# Watchman

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml  release-windows.yml
docs/: SQLITE_HISTORY_MIGRATION_PLAN.md  WATCHMAN_CODEMAP.md
src/: index.html  main.js  renderer.js  styles.css  taskbar.html  taskbar.js  tauri-bridge.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: taskbar_embed.cpp
src-tauri/scripts/: temperature_probe.ps1
src-tauri/src/: lib.rs  main.rs  taskbar_embed.rs
src-tauri/src/commands/: app_monitor.rs  config.rs  data_usage.rs  export.rs  history.rs  mod.rs  monitor.rs  network_health.rs  notifications.rs  profile.rs  troubleshooter.rs
tests/: network-refresh.test.mjs
