[package]
name = "watchman"
version = "1.0.4"
description = "Watchman - A lightweight desktop network monitor"
authors = ["BlinkEye"]
edition = "2021"

[lib]
name = "watchman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "2"
winreg = "0.55"
open = "5"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2.0.0"
windows = { version = "0.57.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_System_Diagnostics_Etw", "Win32_System_Time"] }
tauri-plugin-window-state = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
